# libnest2dLE

./: .gitignore  CMakeLists.txt  GitVersion.yml  README.md  conandata.yml  conanfile.py  conanfile.txt
.github/workflows/: conan-package.yml  requirements-conan-package.txt  unit-test-post.yml  unit-test.yml  update-fork.yml
cmake/: StandardProjectSettings.cmake
cmake_modules/: Findclipper.cmake  conan.cmake
examples/: CMakeLists.txt
include/libnest2d/backends/clipper/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  test.cpp
